# The_Maze_Game

./: CMakeLists.txt  README.md
inc/: maze.h
src/: main.c  maze.c
